# migi

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/debug/res/xml/: network_security_config.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/migi/app/: ConnectionService.kt  CredentialStore.kt  DeviceIdentity.kt  MainActivity.kt  (+2 more)
android/app/src/main/res/drawable/: ic_migi.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/native/: Cargo.toml
android/native/src/: lib.rs
deploy/networkmanager/: 90-migi-routing
deploy/systemd/: migi-user.env.example  migi-user.service  migi.env.example  migi.service  migrate-to-user.sh  verify.sh
deploy/systemd/journald@migi.conf.d/: retention.conf
docs/: administration.md  agent-hooks.md  architecture.md  deployment.md  development.md  pairing.md  protocol.md
integrations/codex/: hooks.json  migi_codex_hook.py  provision_local.py  test_migi_codex_hook.py
server/: go.mod  go.sum
server/cmd/migi-device/: main.go
server/cmd/migi-pair/: main.go
server/cmd/migi-probe/: main.go
server/cmd/migi-server/: agent_ingest.go  main.go  main_test.go  security.go  security_test.go
server/internal/admin/: admin.go  admin_test.go
server/internal/admin/assets/: style.css
server/internal/admin/templates/: dashboard.html
server/internal/agentauth/: token.go  token_test.go
server/internal/events/: broker.go  broker_test.go  journal.go  sqlite.go  sqlite_test.go
server/scripts/: generate-dev-cert.sh
